--- a/pages/home/styles/about.module.css
+++ b/pages/home/styles/about.module.css
@@ -359,5 +359,13 @@
 @media (orientation: landscape) and (max-height: 400px) {
   .content {
     font-size: 14px;
+    padding: 2% 3%;
+  }
+}
+
+@media (orientation: landscape) and (min-height: 401px) and (max-height: 900px) {
+  .content {
+    font-size: 16px;
+    padding: 1.8% 3%;
   }
 }
